--- a/src/app/shared/crud/update-status-dialog/update-status-dialog.component.html
+++ b/src/app/shared/crud/update-status-dialog/update-status-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="kt-portlet" [ngClass]="{'kt-portlet--body-progress' : viewLoading, 'kt-portlet--body-progress-overlay' : loadingAfterSubmit }">
+<div class="kt-portlet" [class]="{'kt-portlet--body-progress' : viewLoading, 'kt-portlet--body-progress-overlay' : loadingAfterSubmit }">
 	<div class="kt-portlet__head kt-portlet__head__custom">
 		<div class="kt-portlet__head-label">
 			<h3 class="kt-portlet__head-title">{{data.title}}</h3>
