--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -20,14 +20,26 @@
         </div>
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
 
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+            <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="single_zone">
                 <mat-label class="customMatLabel">Zone</mat-label>
                 <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone">
-                    <mat-option [value]="SelectedZones.ZoneId">
-                        {{SelectedZones.ZoneName}}
+                    <mat-option [value]="SelectedZones?.ZoneId">
+                        {{SelectedZones?.ZoneName}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
+            <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="!single_zone">
+                <mat-label class="customMatLabel">Zone</mat-label>
+                <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone"
+                            (selectionChange)="changeZone($event)">
+                    <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
+                                [disabled]="disable_zone">
+                        {{zone?.ZoneName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+
+
         </div>
 
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
@@ -35,17 +47,18 @@
             <mat-form-field class="mat-form-field-fluid" appearance="outline">
                 <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
                 <mat-select [(ngModel)]="selected_b" formControlName="BranchCode" [disabled]="disable_branch"
+                            (selectionChange)="changeBranch($event)"
                             *ngIf="!single_branch">
-                    <mat-option *ngFor="let branch of SelectedBranches" [value]="branch.BranchCode"
-                                [disabled]="disable_circle">
-                        {{branch.Name}}
+                    <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
+                    >
+                        {{branch?.Name}}
                     </mat-option>
                 </mat-select>
                 <mat-select [(ngModel)]="selected_b" formControlName="BranchCode" [disabled]="disable_branch"
                             *ngIf="single_branch">
-                    <mat-option [value]="SelectedBranches.BranchCode"
-                                [disabled]="disable_circle">
-                        {{SelectedBranches.Name}}
+                    <mat-option [value]="SelectedBranches?.BranchCode"
+                    >
+                        {{SelectedBranches?.Name}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
@@ -56,10 +69,10 @@
             <mat-form-field class="mat-form-field-fluid" appearance="outline">
                 <mat-label class="customMatLabel">Circle</mat-label>
 
-                <mat-select [(ngModel)]="selected_c" formControlName="CircleId">
-                    <mat-option *ngFor="let circle of SelectedCircles" [value]="circle.Id"
-                                [disabled]="disable_circle">
-                        {{circle.CircleCode}}
+                <mat-select [(ngModel)]="selected_c" formControlName="CircleId" [disabled]="disable_circle">
+                    <mat-option *ngFor="let circle of SelectedCircles" [value]="circle?.Id"
+                    >
+                        {{circle?.CircleCode}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
