--- a/src/app/modules/geo-fencing/view-get-fancing-modal/view-get-fancing-modal.component.html
+++ b/src/app/modules/geo-fencing/view-get-fancing-modal/view-get-fancing-modal.component.html
@@ -20,7 +20,7 @@
             <div class="col-lg-12 col-md-12  mat-elevation-z8">
 
                 <!--            <label>Search</label>-->
-                <input type="text" class="form-control mb-2" (keydown.enter)="$event.preventDefault()"
+                <input matInput type="text" (keydown.enter)="$event.preventDefault()"
                        placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off"
                        spellcheck="off" type="text"
                        #search>
