--- a/src/app/modules/user-management/Role/role-list/role-list.component.html
+++ b/src/app/modules/user-management/Role/role-list/role-list.component.html
@@ -1,12 +1,13 @@
 <div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
 
     <!-- Header -->
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b">
+    <div
+        class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b">
         <!-- Loader -->
         <div
             class="absolute inset-x-0 bottom-0"
             *ngIf="isLoading">
-            <mat-progress-bar [mode]="'indeterminate'"></mat-progress-bar>
+            <mat-progress-bar [mode]="'indeterminate'" *ngIf="loading"></mat-progress-bar>
         </div>
         <!-- Title -->
         <div class="text-4xl font-extrabold tracking-tight">Roles list</div>
@@ -16,7 +17,7 @@
                 class="ml-4"
                 mat-flat-button
                 [color]="'primary'"
-                (click)="createItem()">
+                (click)="createOrEditItem()">
                 <mat-icon [svgIcon]="'heroicons_outline:plus'"></mat-icon>
                 <span class="ml-2 mr-1">Add New </span>
             </button>
@@ -27,148 +28,58 @@
     <div class="flex flex-auto overflow-hidden">
 
         <!-- Products list -->
-        <div class="flex flex-col flex-auto sm:mb-18 overflow-hidden sm:overflow-y-auto">
-            <ng-container *ngIf="(products$ | async) as products">
-                <ng-container *ngIf="products.length > 0; else noProducts">
-                    <div class="grid">
-                        <!-- Header -->
-                        <div
-                            class="inventory-grid z-10 sticky top-0 grid gap-4 py-4 px-6 md:px-8 shadow text-md font-semibold text-secondary bg-gray-50 dark:bg-black dark:bg-opacity-5"
-                            matSort
-                            matSortDisableClear>
-                            <div></div>
-                            <div
-                                class="hidden md:block"
-                                [mat-sort-header]="'sku'">
-                                SKU
-                            </div>
-                            <div [mat-sort-header]="'name'">Name</div>
-                            <div
-                                class="hidden sm:block"
-                                [mat-sort-header]="'price'">
-                                Price
-                            </div>
-                            <div
-                                class="hidden lg:block"
-                                [mat-sort-header]="'stock'">
-                                Stock
-                            </div>
-                            <div
-                                class="hidden lg:block"
-                                [mat-sort-header]="'active'">
-                                Active
-                            </div>
-                            <div class="hidden sm:block">Details</div>
-                        </div>
-                        <!-- Rows -->
-                        <ng-container *ngIf="(products$ | async) as products">
-                            <ng-container *ngFor="let product of products; trackBy: trackByFn">
-                                <div class="inventory-grid grid items-center gap-4 py-3 px-6 md:px-8 border-b">
+        <div class="flex flex-auto overflow-hidden" style="flex-direction: column;">
+            <div class="flex flex-col flex-auto sm:mb-18 overflow-hidden sm:overflow-y-auto">
+                <mat-table class="lmat-elevation-z8"
+                           #table
+                           [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems} "
+                           matSort
+                           #sort1="matSort"
+                           matSortActive="id"
+                           matSortDirection="asc"
+                           matSortDisableClear>
 
-                                    <!-- Image -->
-                                    <div class="flex items-center">
-                                        <div class="relative flex flex-0 items-center justify-center w-12 h-12 mr-6 rounded overflow-hidden border">
-                                            <img
-                                                class="w-8"
-                                                *ngIf="product.thumbnail"
-                                                [alt]="'Product thumbnail image'"
-                                                [src]="product.thumbnail">
-                                            <div
-                                                class="flex items-center justify-center w-full h-full text-xs font-semibold leading-none text-center uppercase"
-                                                *ngIf="!product.thumbnail">
-                                                NO THUMB
-                                            </div>
-                                        </div>
-                                    </div>
+                    <ng-container matColumnDef="name">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> Name</mat-header-cell>
+                        <mat-cell *matCellDef="let profile">{{profile.ProfileName}}</mat-cell>
+                    </ng-container>
 
-                                    <!-- SKU -->
-                                    <div class="hidden md:block truncate">
-                                        {{product.sku}}
-                                    </div>
+                    <ng-container matColumnDef="GroupName">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> Group Name</mat-header-cell>
+                        <mat-cell *matCellDef="let profile"> {{profile.GroupName}}</mat-cell>
+                    </ng-container>
 
-                                    <!-- Name -->
-                                    <div class="truncate">
-                                        {{product.name}}
-                                    </div>
+                    <ng-container matColumnDef="Description">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> Description</mat-header-cell>
+                        <mat-cell *matCellDef="let profile"> {{profile.ProfileDesc}}</mat-cell>
+                    </ng-container>
 
-                                    <!-- Price -->
-                                    <div class="hidden sm:block">
-                                        {{product.price | currency:'USD':'symbol':'1.2-2'}}
-                                    </div>
+                    <ng-container matColumnDef="actions">
+                        <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+                        <mat-cell *matCellDef="let activity">
+                            <button mat-icon-button color="primary"
+                                    (click)="createOrEditItem(activity)">
+                                <mat-icon>
+                                    {{ activity.isCoreactivity ? 'visibility' : 'create' }}
+                                </mat-icon>
+                            </button>&nbsp;
+                            <button mat-icon-button color="primary"
+                            (click)="deleteActivity(activity)">
+                        <mat-icon>
+                            {{ activity.isCoreactivity ? 'visibility' : 'delete' }}
+                        </mat-icon>
+                    </button>&nbsp;
+                        </mat-cell>
+                    </ng-container>
+                    <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true;"
+                                    class="table-header-background"></mat-header-row>
 
-                                    <!-- Stock -->
-                                    <div class="hidden lg:flex items-center">
-                                        <div class="min-w-4">{{product.stock}}</div>
-                                        <!-- Low stock -->
-                                        <div
-                                            class="flex items-end ml-2 w-1 h-4 bg-red-200 rounded overflow-hidden"
-                                            *ngIf="product.stock < 20">
-                                            <div class="flex w-full h-1/3 bg-red-600"></div>
-                                        </div>
-                                        <!-- Medium stock -->
-                                        <div
-                                            class="flex items-end ml-2 w-1 h-4 bg-orange-200 rounded overflow-hidden"
-                                            *ngIf="product.stock >= 20 && product.stock < 30">
-                                            <div class="flex w-full h-2/4 bg-orange-400"></div>
-                                        </div>
-                                        <!-- High stock -->
-                                        <div
-                                            class="flex items-end ml-2 w-1 h-4 bg-green-100 rounded overflow-hidden"
-                                            *ngIf="product.stock >= 30">
-                                            <div class="flex w-full h-full bg-green-400"></div>
-                                        </div>
-                                    </div>
+                    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+                </mat-table>
 
-                                    <!-- Active -->
-                                    <div class="hidden lg:block">
-                                        <ng-container *ngIf="product.active">
-                                            <mat-icon
-                                                class="text-green-400 icon-size-5"
-                                                [svgIcon]="'heroicons_solid:check'"></mat-icon>
-                                        </ng-container>
-                                        <ng-container *ngIf="!product.active">
-                                            <mat-icon
-                                                class="text-gray-400 icon-size-5"
-                                                [svgIcon]="'heroicons_solid:x'"></mat-icon>
-                                        </ng-container>
-                                    </div>
-
-                                    <!-- Details button -->
-                                    <div>
-                                        <button
-                                            class="min-w-10 min-h-7 h-7 px-2 leading-6"
-                                            mat-stroked-button
-                                            (click)="toggleDetails(product.id)">
-                                            <mat-icon
-                                                class="icon-size-5"
-                                                [svgIcon]="selectedProduct?.id === product.id ? 'heroicons_solid:chevron-up' : 'heroicons_solid:chevron-down'"></mat-icon>
-                                        </button>
-                                    </div>
-                                </div>
-                                <div class="grid">
-                                    <ng-container *ngIf="selectedProduct?.id === product.id">
-                                        <ng-container *ngTemplateOutlet="rowDetailsTemplate; context: {$implicit: product}"></ng-container>
-                                    </ng-container>
-                                </div>
-                            </ng-container>
-                        </ng-container>
-                    </div>
-
-                    <mat-paginator
-                        class="sm:absolute sm:inset-x-0 sm:bottom-0 border-b sm:border-t sm:border-b-0 z-10 bg-gray-50 dark:bg-transparent"
-                        [ngClass]="{'pointer-events-none': isLoading}"
-                        [length]="pagination.length"
-                        [pageIndex]="pagination.page"
-                        [pageSize]="pagination.size"
-                        [pageSizeOptions]="[5, 10, 25, 100]"
-                        [showFirstLastButtons]="true"></mat-paginator>
-
-                </ng-container>
-            </ng-container>
-            <ng-template #noProducts>
-                <div class="p-8 sm:p-16 border-t text-4xl font-semibold tracking-tight text-center">There are no products!</div>
-            </ng-template>
-
+            </div>
+            <mat-paginator [length]="50" [pageSize]="itemsPerPage" [pageSizeOptions]="[5, 10, 25]">
+            </mat-paginator>
         </div>
 
     </div>
