--- a/src/app/modules/user-management/Role/role-list/role-list.component.html
+++ b/src/app/modules/user-management/Role/role-list/role-list.component.html
@@ -63,12 +63,12 @@
                                     {{ activity.isCoreactivity ? 'visibility' : 'create' }}
                                 </mat-icon>
                             </button>&nbsp;
-                            <button mat-icon-button color="primary"
+                            <!-- <button mat-icon-button color="primary"
                             (click)="deleteActivity(activity)">
                         <mat-icon>
                             {{ activity.isCoreactivity ? 'visibility' : 'delete' }}
                         </mat-icon>
-                    </button>&nbsp;
+                    </button>&nbsp; -->
                         </mat-cell>
                     </ng-container>
                     <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true;"
