--- a/src/app/modules/user-management/activity/activity-edit/activity-form.dialog.component.html
+++ b/src/app/modules/user-management/activity/activity-edit/activity-form.dialog.component.html
@@ -19,7 +19,10 @@
             Oh snap! Change a few things up and try submitting again.
           </kt-alert>
 
-          <div class="form-group kt-form__group row">
+          <div class="form-group kt-form__group row" style="    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 3%;">
             <div class="col-lg-3 kt-margin-bottom-20-mobile">
               <mat-form-field class="mat-form-field-fluid" appearance="outline">
                 <input matInput placeholder="Enter Page Name" formControlName="ActivityName" maxlength="30"
