User Management Done

--- a/src/app/modules/user-management/activity/activity-list/activity-list.component.html
+++ b/src/app/modules/user-management/activity/activity-list/activity-list.component.html
@@ -1,32 +1,38 @@
-<div class="absolute inset-0 flex flex-col min-w-0 overflow-y-auto" cdkScrollable>
+
+
+
+
+<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
 
   <!-- Header -->
   <div
-    class="flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between p-6 sm:py-8 sm:px-10 border-b bg-card dark:bg-transparent">
-    <div class="flex-1 min-w-0">
-
-      <!-- Title -->
-      <div class="mt-2">
-        <h2 class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate">
-          Pages List
-        </h2>
+      class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b">
+      <!-- Loader -->
+      <div
+          class="absolute inset-x-0 bottom-0"
+          *ngIf="isLoading">
+          <mat-progress-bar [mode]="'indeterminate'" *ngIf="isLoading"></mat-progress-bar>
       </div>
-    </div>
-    <!-- Actions -->
-    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-      <button mat-stroked-button (click)="addActivity()">
-        <mat-icon class="icon-size-5 mr-2"  [svgIcon]="'heroicons_solid:pencil-alt'"></mat-icon>
-        Create
-      </button>
-
-    </div>
+      <!-- Title -->
+      <div class="text-4xl font-extrabold tracking-tight">Pages List</div>
+      <!-- Actions -->
+      <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+          <button
+              class="ml-4"
+              mat-flat-button
+              [color]="'primary'"
+              (click)="addActivity()">
+              <mat-icon [svgIcon]="'heroicons_outline:plus'"></mat-icon>
+              <span class="ml-2 mr-1">Add New </span>
+          </button>
+      </div>
   </div>
 
-  <!-- Main -->
-  <div class="flex-auto p-6 sm:p-10">
-
+   <!-- Main -->
+   <div class="">
+  
     <!-- CONTENT GOES HERE -->
-    <div class="h-400 min-h-400 max-h-400 border-2 border-dashed border-gray-300 rounded-2xl">
+    <div class="pt-1">
       <div class="form-group row">
         <div class="col-lg-12 col-md-12 kt-margin-bottom-20-mobile  mat-elevation-z8" id="custom-table-activity-list">
           <div class="custom-accordion" *ngFor="let activity of userActivities;let i=index">
