--- a/src/app/modules/report-managment/apilogs-list/apilogs-list.component.scss
+++ b/src/app/modules/report-managment/apilogs-list/apilogs-list.component.scss
@@ -1,41 +1,80 @@
-/* Structure */
-.example-container {
-    position: relative;
+.mat-accordion .mat-header-row {
+    padding-left: 1.5rem;
+    padding-right: 2rem;
+    border-bottom: none;
 }
 
-.example-table-container {
-    position: relative;
-    overflow: auto;
+.mat-expansion-panel-header.mat-row {
+    border-bottom: none;
 }
 
-table {
-    width: 100%;
+//copied from https://github.com/angular/material2/blob/master/src/lib/table/table.scss
+$mat-header-row-height: 56px;
+$mat-row-height: 48px;
+$mat-row-horizontal-padding: 24px;
+
+.mat-table {
+    display: block;
 }
 
-.example-loading-shade {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 56px;
-    right: 0;
-    background: rgba(0, 0, 0, 0.15);
-    z-index: 1;
+.mat-header-row {
+    min-height: $mat-header-row-height;
+}
+
+.mat-row {
+    min-height: $mat-row-height;
+}
+
+.mat-row, .mat-header-row {
     display: flex;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
     align-items: center;
-    justify-content: center;
+    padding: 0 $mat-row-horizontal-padding;
+    box-sizing: border-box;
+
+    // Workaround for https://goo.gl/pFmjJD in IE 11. Adds a pseudo
+    // element that will stretch the row the correct height. See:
+    // https://connect.microsoft.com/IE/feedback/details/802625
+    &::after {
+        display: inline-block;
+        min-height: inherit;
+        content: '';
+    }
 }
 
-.example-rate-limit-reached {
-    max-width: 360px;
-    text-align: center;
+.mat-cell, .mat-header-cell {
+    flex: 1;
+    overflow: hidden;
+    word-wrap: break-word;
+}
+.custom-accordion {
+    border-radius: 25px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    transition: dispaly 1s ease;
+
 }
 
-/* Column Widths */
-.mat-column-number,
-.mat-column-state {
-    max-width: 64px;
+.custom-accordion-head {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-bottom: 1px solid green;
+
 }
 
-.mat-column-created {
-    max-width: 124px;
+.custom-padding {
+    padding: 10px;
+
+    display: flex;
+    margin-right: 10%;
 }
+
+.custom-accordion-body {
+    padding: 20px;
+    -webkit-transition: opacity 600ms, visibility 600ms;
+    transition: opacity 600ms, visibility 600ms;
+}
+
