Geo Fencing Module Done

--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -122,16 +122,9 @@
 
     </div>
     <div class="flex flex-auto overflow-hidden" style="flex-direction: column;">
-        <div class="example-container mat-elevation-z8">
-            <div class="example-loading-shade"
-                 *ngIf="loaded">
-                <mat-spinner *ngIf="!loaded"></mat-spinner>
-            </div>
-        </div>
-
         <div class="example-table-container">
 
-            <mat-table
+            <table mat-table
                    [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems} "
                    class="example-table"
                    matSort matSortActive="created" matSortDisableClear matSortDirection="desc">
@@ -164,7 +157,7 @@
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </mat-table>
+            </table>
         </div>
         <div class="mat-select" style="padding:5px;">
             Items per page:
